add function of copy password

--- a/index.html
+++ b/index.html
@@ -11,9 +11,10 @@
   <div class="container">
     <h1>Password Generator</h1>
     <div class="generate-password">
-
+      <input type="text">
+      <img src="./image/copy.png" alt="">
     </div>
-    <div>
+    
 
     <main>
       <div>
@@ -44,8 +45,13 @@
         <input class="symbolInput" type="checkbox" name="" id="">
         <label for="">Include symbols</label>
       </div>
+
+      <div class="strength">
+        <p>STRENGTH</p> 
+        <h6></h6>
+      </div>
       
-      <button>generate</button>
+      <button>GENERATE</button>
     </main>
 
 
